Fixed overflow issue in small screens

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -389,6 +389,3 @@
 	}
 }
 
-.mobile-menu {
-	overflow-y: hidden !important;
-}
